--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   google_maps_flutter: ^0.5.19+2
-  geolocator: ^5.0.1
+  geolocator: ^5.1.0
+  location: ^1.4.1
 
 dev_dependencies:
   flutter_test:
